add nav left slider

--- a/prototype/vnshop/product-detail.html
+++ b/prototype/vnshop/product-detail.html
@@ -24,13 +24,13 @@
 <header class="fixed-top border-bottom-1 bg-white">
     <div class="container">
         <div class="row py16 align-items-center">
-            <div class="col-1 col-md-1">
+            <div class="col-2 col-lg-1 m-px8">
                 <div class="nav-icon"><span class="icon-menu"></span></div>
             </div>
-            <div class="col-3 col-md-2">
+            <div class="col-3 col-lg-2 m-px8">
                 <img class="logo w-75" src="img/logo_vnshop.png" alt="logo">
             </div>
-            <div class="col-6 col-md-5 border-right-1">
+            <div class="col-5 col-lg-5 border-right-1 m-px8">
                 <div class="field">
                     <label for="field-search">
                         <span class="placeholder content">Tìm kiếm</span>
@@ -41,18 +41,18 @@
                     </div>
                 </div>
             </div>
-            <div class="col-1 col-md-2 d-flex align-items-center">
+            <div class="col-1 col-lg-2 d-flex align-items-cente m-px8">
                 <div class="nav-icon">
                     <span class="icon-cart"></span>
                 </div>
-                <p class="content hidden-md-down">&nbsp;&nbsp;Giỏ hàng của tôi</p>
+                <p class="content hidden-lg-down mb-0">&nbsp;&nbsp;Giỏ hàng của tôi</p>
             </div>
 
-            <div class="col-1 col-md-2 d-flex align-items-center">
-                <div class="nav-icon d-flex align-items-center">
+            <div class="col-1 col-lg-2 d-flex align-items-center m-px8">
+                <div class="nav-icon">
                     <span class="icon-user"></span>
                 </div>
-                <p class="content hidden-md-down">&nbsp;&nbsp;Đào Thái Hà</p>
+                <p class="content hidden-lg-down mb-0">&nbsp;&nbsp;Đào Thái Hà</p>
             </div>
         </div>
     </div>
@@ -68,28 +68,28 @@
             </ol>
         </div>
 
-        <div class="row content mt16">
-            <div class="col-10">
+        <div class="row mt16">
+            <div class="col-12 col-lg-10">
                 <div class="row">
-                    <div class="col-12 mb16">
-                        <div class="font-size-18">
+                    <div class="col-lg-12 mb16">
+                        <p class="content font-size-18">
                             Bộ sưu tập mỹ phẩm Babor “you’re women, you’re right”
-                        </div>
+                        </p>
                     </div>
-                    <div class="col-2">
+                    <div class="col-12 col-lg-2">
                         <img class="w-100" src="img/female-2.png" alt="">
                         <img class="w-100 mt16" src="img/female-2.png" alt="">
                         <img class="w-100 mt16" src="img/female-2.png" alt="">
                     </div>
-                    <div class="col-5">
+                    <div class="col-12 col-lg-5 m-mt16">
                         <img class="w-100" src="img/female-b-1.png" alt="">
 
                     </div>
-                    <div class="col-5">
-                        <div class="font-size-16">Combo bộ trang điểm và phấn nền Babor
+                    <div class="col-12 col-lg-5 m-mt16">
+                        <p class="content font-size-16">Combo bộ trang điểm và phấn nền Babor
                             3 sản phẩm
-                        </div>
-                        <div class="mt16">
+                        </p>
+                        <p class="content mt16">
                             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
                             tincidunt ut
                             laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
@@ -98,39 +98,39 @@
                             ullamcorper suscipit lobortis nisl ut aliqui.
                             <br><br>
                             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-                        </div>
+                        </p>
                         <div class="mt16 d-flex align-items-center">
-                            <div>Số lượng</div>
-                            <button class="button-normal-grey-small ml16 bg-grey-light text-black">+</button>
+                            <p class="content">Số lượng</p>
+                            <button class="box-span ml16 bg-grey-light text-black">+</button>
                             <div class="ml16 box-span">1</div>
-                            <button class="button-normal-grey-small ml16 bg-grey-light text-black">-</button>
+                            <button class="box-span ml16 bg-grey-light text-black">-</button>
                         </div>
                         <div class="mt16 d-flex align-items-center">
-                            <div>Màu sắc</div>
+                            <p class="content">Màu sắc</p>
                             <div class="ml16">
-                                <select class="form-control">
+                                <select class="form-control content">
                                     <option>Màu sắc x</option>
                                 </select>
                             </div>
                         </div>
-                        <div class="py16 font-size-18">
+                        <p class="content py16 font-size-18">
                             150.000 VND
-                        </div>
+                        </p>
                         <div class="row mt16">
-                            <div class="col-6">
-                                <button class="button-normal-grey-small bg-grey-light w-100">Add to cart</button>
+                            <div class="col-6 col-lg-6">
+                                <button class="button-normal-grey-small content bg-grey-light w-100">Add to cart</button>
                             </div>
-                            <div class="col-6">
-                                <button class="button-normal-grey-small w-100">Buy now</button>
+                            <div class="col-6 col-lg-6">
+                                <button class="button-normal-grey-small content w-100">Buy now</button>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="row mt32 content">
-                    <div class="col-12 ">
-                        <div class="text-uppercase">Thông tin sản phẩm</div>
-                        <div class="mt16">
+                    <div class="col-lg-12">
+                        <p class="content-bold text-uppercase">Thông tin sản phẩm</p>
+                        <p class="content mt16">
                             du lịch hàn quốc 4 ngày 3 đêm
                             <br><br>
                             Thương hiệu Mango được hai anh em Isak Andic và Nahman Andic thành lập vào năm 1984 với cửa
@@ -155,11 +155,11 @@
                             quần áo, giày dép, nước hoa… Mango còn phát triển dòng sản phẩm phụ kiện thời trang như túi
                             xách,
                             ví, kính mát, đồng hồ…
-                        </div>
+                        </p>
                         <div class="text-center">
                             <img class="py16 w-75" src="img/female-b-1.png" alt="">
                         </div>
-                        <div class="mt16">
+                        <p class="content mt16">
                             Thương hiệu Mango được hai anh em Isak Andic và Nahman Andic thành lập vào năm 1984 với cửa
                             hàng
                             đầu
@@ -175,89 +175,113 @@
                             toàn
                             thế
                             giới. Chính thức du nhập vào V
-                        </div>
+                        </p>
 
                     </div>
                 </div>
 
 
-                <div class="row content py16 border-top-1 mt32">
-                    <div class="col-12 text-center py16">
+                <div class="row py16 border-top-1 mt32">
+
+                    <p class="content col-lg-12 text-center py16">
                         - Sản phẩm bạn có thể thích -
+                    </p>
+
+                    <div class="col-lg-6 mt16 d-flex">
+                        <div class="flex-grow-7 d-flex align-items-end">
+                            <img class="w-100" src="img/voucher-1.png" alt="">
+                        </div>
+                        <div class="flex-grow-5">
+                            <div class="voucher-box h-100">
+                                <div class="content border-bottom-1 pb8 m-font-size-12">MonSoon Music Festival 2017 tại Hoàng
+                                    Thành - Hà Nội
+                                </div>
+                                <div class="voucher-address py8 flex-grow">
+                                    <div class="content font-size-12">TP Hà Nội</div>
+                                    <div class="content font-size-12">Thời gian áp dụng:</div>
+                                    <div class="content font-size-12">24/1/2141 - 21/1/1212</div>
+                                </div>
+                                <div class="content product-price">150.000 VND</div>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="col-6 mt16 d-flex">
-                        <div class="flex-grow-7">
+                    <div class="col-lg-6 mt16 d-flex">
+                        <div class="flex-grow-7 d-flex align-items-end">
                             <img class="w-100" src="img/voucher-1.png" alt="">
                         </div>
                         <div class="flex-grow-5">
                             <div class="voucher-box h-100">
-                                <div class="voucher-title border-bottom-1 pb8">MonSoon Music Festival 2017 tại Hoàng
+                                <div class="content border-bottom-1 pb8 m-font-size-12">MonSoon Music Festival 2017 tại Hoàng
                                     Thành - Hà Nội
                                 </div>
                                 <div class="voucher-address py8 flex-grow">
-                                    <div class="">TP Hà Nội</div>
-                                    <div class="">Thời gian áp dụng:</div>
-                                    <div class="">24/1/2141 - 21/1/1212</div>
+                                    <div class="content font-size-12">TP Hà Nội</div>
+                                    <div class="content font-size-12">Thời gian áp dụng:</div>
+                                    <div class="content font-size-12">24/1/2141 - 21/1/1212</div>
                                 </div>
-                                <div class="product-price">150.000 VND</div>
+                                <div class="content product-price">150.000 VND</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 mt16 d-flex">
-                        <div class="flex-grow-7">
+
+                    <div class="col-lg-6 mt16 d-flex">
+                        <div class="flex-grow-7 d-flex align-items-end">
                             <img class="w-100" src="img/voucher-1.png" alt="">
                         </div>
                         <div class="flex-grow-5">
                             <div class="voucher-box h-100">
-                                <div class="voucher-title border-bottom-1 pb8">MonSoon Music Festival 2017 tại Hoàng
+                                <div class="content border-bottom-1 pb8 m-font-size-12">MonSoon Music Festival 2017 tại Hoàng
                                     Thành - Hà Nội
                                 </div>
                                 <div class="voucher-address py8 flex-grow">
-                                    <div class="">TP Hà Nội</div>
-                                    <div class="">Thời gian áp dụng:</div>
-                                    <div class="">24/1/2141 - 21/1/1212</div>
+                                    <div class="content font-size-12">TP Hà Nội</div>
+                                    <div class="content font-size-12">Thời gian áp dụng:</div>
+                                    <div class="content font-size-12">24/1/2141 - 21/1/1212</div>
                                 </div>
-                                <div class="product-price">150.000 VND</div>
+                                <div class="content product-price">150.000 VND</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 mt16 d-flex">
-                        <div class="flex-grow-7">
+
+                    <div class="col-lg-6 mt16 d-flex">
+                        <div class="flex-grow-7 d-flex align-items-end">
                             <img class="w-100" src="img/voucher-1.png" alt="">
                         </div>
                         <div class="flex-grow-5">
                             <div class="voucher-box h-100">
-                                <div class="voucher-title border-bottom-1 pb8">MonSoon Music Festival 2017 tại Hoàng
+                                <div class="content border-bottom-1 pb8 m-font-size-12">MonSoon Music Festival 2017 tại Hoàng
                                     Thành - Hà Nội
                                 </div>
                                 <div class="voucher-address py8 flex-grow">
-                                    <div class="">TP Hà Nội</div>
-                                    <div class="">Thời gian áp dụng:</div>
-                                    <div class="">24/1/2141 - 21/1/1212</div>
+                                    <div class="content font-size-12">TP Hà Nội</div>
+                                    <div class="content font-size-12">Thời gian áp dụng:</div>
+                                    <div class="content font-size-12">24/1/2141 - 21/1/1212</div>
                                 </div>
-                                <div class="product-price">150.000 VND</div>
+                                <div class="content product-price">150.000 VND</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 mt16 d-flex">
-                        <div class="flex-grow-7">
+
+                    <div class="col-lg-6 mt16 d-flex">
+                        <div class="flex-grow-7 d-flex align-items-end">
                             <img class="w-100" src="img/voucher-1.png" alt="">
                         </div>
                         <div class="flex-grow-5">
                             <div class="voucher-box h-100">
-                                <div class="voucher-title border-bottom-1 pb8">MonSoon Music Festival 2017 tại Hoàng
+                                <div class="content border-bottom-1 pb8 m-font-size-12">MonSoon Music Festival 2017 tại Hoàng
                                     Thành - Hà Nội
                                 </div>
                                 <div class="voucher-address py8 flex-grow">
-                                    <div class="">TP Hà Nội</div>
-                                    <div class="">Thời gian áp dụng:</div>
-                                    <div class="">24/1/2141 - 21/1/1212</div>
+                                    <div class="content font-size-12">TP Hà Nội</div>
+                                    <div class="content font-size-12">Thời gian áp dụng:</div>
+                                    <div class="content font-size-12">24/1/2141 - 21/1/1212</div>
                                 </div>
-                                <div class="product-price">150.000 VND</div>
+                                <div class="content product-price">150.000 VND</div>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -339,47 +363,43 @@
 
 
 <footer class="border-top-1">
-    <div class="container py16">
+    <div class="container">
         <div class="row">
-            <div class="col-10">
-                <div class="row py16 d-flex align-items-center">
-                    <div class="col-md-3">
-                        <img class="logo w-50" src="img/logo_vnshop.png" alt="logo">
-                    </div>
-                    <div class="col-md-3">
-                        <p class="content-bold text-uppercase">Liên lạc</p>
-                    </div>
-                    <div class="col-md-3">
-                        <p class="content-bold text-uppercase">Vnshop</p>
-                    </div>
-                    <div class="col-md-3">
-                        <p class="content-bold text-uppercase">Chăm sóc khách hàng</p>
-                    </div>
-                </div>
-
+            <div class="col-12 col-lg-10">
                 <div class="row py16">
-                    <div class="col-md-3">
+
+                    <div class="col-12 col-lg-3">
+                        <div class="mb16">
+                            <img class="logo w-50" src="img/logo_vnshop.png" alt="logo">
+                        </div>
                         <p class="content text-uppercase">Công ty TNHH Vnshop</p>
                         <p class="content text-uppercase">Tầng 7 Hoàng Hòa Thám</p>
                         <p class="content text-uppercase">Thụy Khê Hà Nội</p>
                     </div>
-                    <div class="col-md-3">
-                        <p class="content text-uppercase"><img src="img/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</p>
+
+                    <div class="col-12 col-lg-3 m-mt16">
+                        <p class="content-bold text-uppercase">Liên lạc</p>
+                        <p class="content text-uppercase mt32 m-mt0"><img src="img/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</p>
                         <p class="content text-uppercase"><img src="img/icon-mail.png" alt="">&nbsp;&nbsp;suport@vn.com
                         </p>
                     </div>
-                    <div class="col-md-3">
-                        <p class="content text-uppercase">Giới thiệu</p>
+
+                    <div class="col-12 col-lg-3 m-mt16">
+                        <p class="content-bold text-uppercase">Vnshop</p>
+                        <p class="content text-uppercase  mt32 m-mt0">Giới thiệu</p>
                         <p class="content text-uppercase">Tuyển dụng</p>
                         <p class="content text-uppercase">Đối tác</p>
                     </div>
-                    <div class="col-md-3 text-uppercase">
-                        <p class="content text-uppercase">Hỏi đáp</p>
+
+                    <div class="col-12 col-lg-3 m-mt16">
+                        <p class="content-bold text-uppercase">Chăm sóc khách hàng</p>
+                        <p class="content text-uppercase  mt32 m-mt0">Hỏi đáp</p>
                         <p class="content text-uppercase"> sách đổi trả</p>
                         <p class="content text-uppercase">Điều khoản quy định</p>
                         <p class="content text-uppercase">Giao hàng</p>
                         <p class="content text-uppercase">Thuế</p>
                     </div>
+
                 </div>
             </div>
         </div>
