--- a/prototype/vnshop/index.html
+++ b/prototype/vnshop/index.html
@@ -20,13 +20,13 @@
 <header class="fixed-top border-bottom-1 bg-white">
     <div class="container">
         <div class="row py16 align-items-center">
-            <div class="col-1 col-md-1">
-                <div class="nav-icon"><span class="icon-menu"></span></div>
+            <div class="col-2 col-lg-1 m-px8">
+                <a class="nav-icon" href="#" id="hamburger-icon"><span class="icon-menu"></span></a>
             </div>
-            <div class="col-3 col-md-2">
+            <div class="col-3 col-lg-2 m-px8">
                 <img class="logo w-75" src="img/logo_vnshop.png" alt="logo">
             </div>
-            <div class="col-6 col-md-5 border-right-1">
+            <div class="col-5 col-lg-5 border-right-1 m-px8">
                 <div class="field">
                     <label for="field-search">
                         <span class="placeholder content">Tìm kiếm</span>
@@ -37,27 +37,35 @@
                     </div>
                 </div>
             </div>
-            <div class="col-1 col-md-2 d-flex align-items-center">
+            <div class="col-1 col-lg-2 d-flex align-items-cente m-px8">
                 <div class="nav-icon">
                     <span class="icon-cart"></span>
                 </div>
-                <p class="content hidden-md-down">&nbsp;&nbsp;Giỏ hàng của tôi</p>
+                <p class="content hidden-lg-down mb-0">&nbsp;&nbsp;Giỏ hàng của tôi</p>
             </div>
 
-            <div class="col-1 col-md-2 d-flex align-items-center">
-                <div class="nav-icon d-flex align-items-center">
+            <div class="col-1 col-lg-2 d-flex align-items-center m-px8">
+                <div class="nav-icon">
                     <span class="icon-user"></span>
                 </div>
-                <p class="content hidden-md-down">&nbsp;&nbsp;Đào Thái Hà</p>
+                <p class="content hidden-lg-down mb-0">&nbsp;&nbsp;Đào Thái Hà</p>
             </div>
         </div>
     </div>
 </header>
 
+<nav class="slide-left-nav">
+    <ul class="content">
+        <li><a href="#">Item 1</a></li>
+        <li><a href="#">Item 2</a></li>
+        <li><a href="#">Item 3</a></li>
+    </ul>
+</nav>
+
 <main>
     <div class="container mt16 pb60">
         <div class="row">
-            <div class="col-md-8 px13">
+            <div class="col-lg-8 px13">
                 <div class="cat-box">
                     <img class="w-100 h-100" src="img/female-b-1.png" alt="">
                     <div class="cat-box-item">
@@ -66,8 +74,8 @@
                 </div>
             </div>
 
-            <div class="col-md-4 px13 d-flex flex-column justify-content-between">
-                <div class="cat-box">
+            <div class="col-lg-4 px13 d-flex flex-column justify-content-between">
+                <div class="cat-box m-mt16">
                     <img class="w-100" src="img/female-2.png" alt="">
                     <div class="cat-box-item">
                         <p class="content-bold">
@@ -77,7 +85,7 @@
                     </div>
                 </div>
 
-                <div class="cat-box">
+                <div class="cat-box m-mt16">
                     <img class="w-100" src="img/female-3.png" alt="">
                     <div class="cat-box-item">
                         <p class="content-bold">
@@ -89,8 +97,8 @@
             </div>
         </div>
 
-        <div class="row mt26">
-            <div class="col-md-4 px13">
+        <div class="row mt26 m-mt16">
+            <div class="col-lg-4 px13">
                 <div class="cat-box w-32">
                     <img class="w-100" src="img/female-4.png" alt="">
                     <div class="cat-box-item">
@@ -101,7 +109,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 px13">
+            <div class="col-lg-4 px13">
                 <div class="cat-box w-32 m-mt16">
                     <img class="w-100" src="img/female-5.png" alt="">
                     <div class="cat-box-item">
@@ -112,7 +120,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 px13">
+            <div class="col-lg-4 px13">
                 <div class="cat-box w-32 m-mt16">
                     <img class="w-100" src="img/female-6.png" alt="">
                     <div class="cat-box-item">
@@ -125,8 +133,8 @@
             </div>
         </div>
 
-        <div class="row mt26">
-            <div class="col-md-4 px13">
+        <div class="row mt26 m-mt16">
+            <div class="col-lg-4 px13">
                 <div class="cat-box">
                     <img class="w-100" src="img/female-7.png" alt="">
                     <div class="cat-box-item">
@@ -137,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-8 px13">
+            <div class="col-lg-8 px13 m-mt16">
                 <div class="cat-box">
                     <img class="w-100" src="img/female-8.png" alt="">
                     <div class="cat-box-item">
@@ -150,12 +158,12 @@
             </div>
         </div>
 
-        <div class="row mt48">
-            <div class="col-md-12 text-center">
+        <div class="row mt48 m-mt16">
+            <div class="col-lg-12 text-center">
                 <p class="content-bold text-uppercase">- Sản phẩm mới -</p>
             </div>
 
-            <section class="col-md-12 mt8 d-flex flex-wrap">
+            <section class="col-lg-12 mt8 d-flex flex-wrap">
                 <div class="cat-box-small">
                     <img class="w-100" src="img/female-s-1.png" alt="">
                     <p class="content mt8">Bộ sưu tập Essentials</p>
@@ -245,7 +253,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12 text-center mt32">
+            <div class="col-lg-12 text-center mt32">
                 <button class="button-more" type="button">Xem thêm thông tin</button>
             </div>
         </div>
@@ -255,43 +263,44 @@
 </main>
 
 <footer class="border-top-1">
-    <div class="container py16">
-        <div class="row py16 d-flex align-items-center">
-            <div class="col-md-3">
-                <img class="logo w-50" src="img/logo_vnshop.png" alt="logo">
-            </div>
-            <div class="col-md-3">
-                <p class="content-bold text-uppercase">Liên lạc</p>
-            </div>
-            <div class="col-md-3">
-                <p class="content-bold text-uppercase">Vnshop</p>
-            </div>
-            <div class="col-md-3">
-                <p class="content-bold text-uppercase">Chăm sóc khách hàng</p>
-            </div>
-        </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-10">
+                <div class="row py16">
 
-        <div class="row py16">
-            <div class="col-md-3">
-                <p class="content text-uppercase">Công ty TNHH Vnshop</p>
-                <p class="content text-uppercase">Tầng 7 Hoàng Hòa Thám</p>
-                <p class="content text-uppercase">Thụy Khê Hà Nội</p>
-            </div>
-            <div class="col-md-3">
-                <p class="content text-uppercase"><img src="img/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</p>
-                <p class="content text-uppercase"><img src="img/icon-mail.png" alt="">&nbsp;&nbsp;suport@vn.com</p>
-            </div>
-            <div class="col-md-3">
-                <p class="content text-uppercase">Giới thiệu</p>
-                <p class="content text-uppercase">Tuyển dụng</p>
-                <p class="content text-uppercase">Đối tác</p>
-            </div>
-            <div class="col-md-3 text-uppercase">
-                <p class="content text-uppercase">Hỏi đáp</p>
-                <p class="content text-uppercase"> sách đổi trả</p>
-                <p class="content text-uppercase">Điều khoản quy định</p>
-                <p class="content text-uppercase">Giao hàng</p>
-                <p class="content text-uppercase">Thuế</p>
+                    <div class="col-12 col-lg-3">
+                        <div class="mb16">
+                            <img class="logo w-50" src="img/logo_vnshop.png" alt="logo">
+                        </div>
+                        <p class="content text-uppercase">Công ty TNHH Vnshop</p>
+                        <p class="content text-uppercase">Tầng 7 Hoàng Hòa Thám</p>
+                        <p class="content text-uppercase">Thụy Khê Hà Nội</p>
+                    </div>
+
+                    <div class="col-12 col-lg-3 m-mt16">
+                        <p class="content-bold text-uppercase">Liên lạc</p>
+                        <p class="content text-uppercase mt32 m-mt0"><img src="img/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</p>
+                        <p class="content text-uppercase"><img src="img/icon-mail.png" alt="">&nbsp;&nbsp;suport@vn.com
+                        </p>
+                    </div>
+
+                    <div class="col-12 col-lg-3 m-mt16">
+                        <p class="content-bold text-uppercase">Vnshop</p>
+                        <p class="content text-uppercase  mt32 m-mt0">Giới thiệu</p>
+                        <p class="content text-uppercase">Tuyển dụng</p>
+                        <p class="content text-uppercase">Đối tác</p>
+                    </div>
+
+                    <div class="col-12 col-lg-3 m-mt16">
+                        <p class="content-bold text-uppercase">Chăm sóc khách hàng</p>
+                        <p class="content text-uppercase  mt32 m-mt0">Hỏi đáp</p>
+                        <p class="content text-uppercase"> sách đổi trả</p>
+                        <p class="content text-uppercase">Điều khoản quy định</p>
+                        <p class="content text-uppercase">Giao hàng</p>
+                        <p class="content text-uppercase">Thuế</p>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
@@ -315,6 +324,33 @@
                 $('.field label').show();
             }
         });
+
+        var slideNav = $('.slide-left-nav');
+
+        $('#hamburger-icon').click(function (e) {
+            e.preventDefault();
+            navToggle();
+         });
+
+        $('#nav-close').click(function (e) {
+            e.preventDefault();
+            navToggle();
+        });
+
+        function navToggle() {
+            if (slideNav.hasClass('show')) {
+                slideNav.removeClass('show');
+                $('.slide-left-nav').animate({
+                    left: "-=200"
+                }, 400);
+            } else {
+                slideNav.addClass('show');
+                $('.slide-left-nav').animate({
+                    left: "+=200"
+                }, 400);
+            }
+        }
+
 
 
     })();
