--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/assets/css/app.css">
 </head>
 <body>
-	<header ui-view="header"></header>
+	<header ui-view="header" style="margin-bottom:24px"></header>
 	<div ui-view="content"></div>
     <div ui-view="cart_right"></div>
 	<div ui-view="footer"></div>
